@@ -1,4 +1,5 @@
 
+  * The order of radiostations preference are saved
   * Added an option to allow albums be ordered by Year
   * Now the database has version for future updates.
   * If covers are updated it will be changed in database. If you had older version
